--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/niranjana94/user-details-server/issues"
   },
-  "homepage": "https://github.com/niranjana94/user-details-server#readme"
+  "homepage": "https://github.com/niranjana94/user-details-server#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongodb": "^3.6.2"
+  }
 }
